--- a/templates/Home/search.html
+++ b/templates/Home/search.html
@@ -29,7 +29,7 @@
                 <div class="mb-1 text-muted">{{post.datetime}}</div>
                 <p class="card-text mb-auto">{{post.content|truncatewords:90|safe}}</p>
                 <div class="my-2">
-                    <a href="/blog/{{post.slug}}" role="button" class="btn btn-primary">Continue reading</a>
+                    <a href="/Blog/{{post.slug}}" role="button" class="btn btn-primary">Continue reading</a>
                 </div>
 
             </div>
