--- a/templates/Home/search.html
+++ b/templates/Home/search.html
@@ -27,7 +27,7 @@
                 <strong class="d-inline-block mb-2 text-primary">Article by {{post.author}}</strong>
                 <h3 class="mb-0">{{post.title}}</h3>
                 <div class="mb-1 text-muted">{{post.datetime}}</div>
-                <p class="card-text mb-auto">{{post.content|truncatewords:90|safe}}</p>
+                <p class="card-text mb-auto">{{post.content|safe|truncatewords:90|safe}}</p>
                 <div class="my-2">
                     <a href="/Blog/{{post.slug}}" role="button" class="btn btn-primary">Continue reading</a>
                 </div>
